2005-04-22  Angus Leeming  <leeming@lyx.org>

	* configure.m4: rewrite the "DeclareFOOClass" manipulation
	scripts to be more portable.

2005-04-18  Martin Vermeer  <martin.vermeer@hut.fi>

	* stdtoolbars.ui: remove the 4x4 default size

2005-04-20  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* ui/stdmenus.ui: Add aligned, alignedat, gathered and split
	environment to the math_insert menu

2005-04-14  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* layouts/scrclass.inc: do not assign a toclevel to addchap or
	addsec. 

	* layouts/numreport.inc: use data from numarticle.inc, so that
	changes from article are obvious.

	* layouts/numarticle.inc: add numbering stuff for Paragraph and
	SubParagraph; set Part TocLevel to 0.

2005-04-18  Martin Vermeer  <martin.vermeer@hut.fi>

	* ui/stdtoolbars.ui:
	* ui/stdmenus.ui:
	* layouts/stdclass.inc: clean up around character styles

2005-04-15  Angus Leeming  <leeming@lyx.org>

	* scripts/convertDefault.sh: post error messages to STDERR. 

2005-04-09  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (dist_scripts_DATA): add scripts/fig_copy.sh and
	scripts/lyxpreview_tools.py.

2005-04-08  Angus Leeming  <leeming@lyx.org>

	* generate_contributions.py: new file. Master repository of all
	contributer information. Usage:
	$ generate_contributions.py CREDITS credits.php blanket-permission.php
	where the arguments are the names of the generated files.

	* CREDITS: regenerated from generate_contributions.py.

2005-03-30  John Levon  <levon@movementarian.org>

	* ui/stdmenus.ui: improve Navigate menu

2005-03-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* layouts/revtex4.layout: indicate that the revtex4 class provides
	natbib and url functionality.

2005-03-23  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.m4: add a check to see whether TeX allows spaces in
	file names. Works with web2c 7.5.3 or later.

2005-03-23  Angus Leeming  <leeming@lyx.org>

	* scripts/convertDefault.sh: remove the test that "convert" really,