@@ -1,3 +1,7 @@
+2005-04-25  Martin Vermeer  <martin.vermeer@hut.fi>
+
+	* ui/stdmenus.ui: rearrange tabular features stuff
+
 2005-04-22  Angus Leeming  <leeming@lyx.org>
 
 	* configure.m4: rewrite the "DeclareFOOClass" manipulation
